add newdogenroll,board etc

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//WebContent/web/NewDogEnroll.jsp=UTF-8
 encoding//src/main/java/kr/mycom/jdbcexam/DAO/CalendarDAO.java=UTF-8
